[package]
name = "nivis-python"
version = "0.1.8"
edition = "2021"
description = "A simple rust library for HydroRoll."
license = "MIT"
documentation = "https://nivis.hydroroll.team/"
homepage = "https://nivis.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/nivis-python"
authors = ["HsiangNianian <i@jyunko.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nivis_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
