[project]
name = "psi"
version = "0.1.0"
description = "An embedded cli language | Psi reply"
authors = [
    {name = "简律纯", email = "i@jyunko.cn"},
]
dependencies = [
    "mkdocs-material>=9.4.2",
    "mkdocs-blog-plugin>=0.25",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.7.2",
    "mkdocs-material-extensions>=1.2",
    "neoteroi-mkdocs>=1.0.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
