[project]
name = "nivis-python"
version = "0.1.0"
description = "Python implementation for Nivis."
authors = [
    {name = "简律纯", email = "i@jyunko.cn"},
]
dependencies = [
    "infini>=2.0.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
docs = [
    "furo>=2024.1.29",
    "sphinx-autobuild>=2024.2.4",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "tomli>=2.0.1",
    "sphinx-design>=0.5.0",
    "sphinx-intl>=2.1.0",
]
