[project]
name = "nivis-python"
version = "0.1.0"
description = "Python implementation for Nivis."
authors = [{ name = "简律纯", email = "i@jyunko.cn" }]
dependencies = ["ply>=3.11"]
requires-python = ">=3.11"
readme = "README.rst"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
docs = [
    "furo>=2024.1.29",
    "sphinx-autobuild>=2024.2.4",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "tomli>=2.0.1",
    "sphinx-design>=0.5.0",
    "sphinx-intl>=2.1.0",
]
lint = [
    "ruff>=0.2.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
